--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,9 +53,10 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES"
-            android:value="ocr"
-/>
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="ocr" />
+
         <activity
             android:name=".Maps"
             android:label="@string/title_activity_maps" />
@@ -67,7 +68,8 @@
         <activity android:name=".AlternateChat" />
         <activity android:name=".UserProfile" />
         <activity android:name=".AlternateList" />
-        <activity android:name=".NumberOfPeople"></activity>
+        <activity android:name=".NumberOfPeople" />
+        <activity android:name=".CheckCop"></activity>
     </application>
 
 </manifest>
